CRUD offer with documentation swagger
