# app/Models/User.php
@@ -45,4 +45,8 @@ class User extends Authenticatable
         'email_verified_at' => 'datetime',
         'password' => 'hashed',
     ];
+
+    public function offers() {
+        return $this->hasMany(Offer::class);
+    }
 }
